Fix invoice form auto complete not readable in dark mode

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -71,3 +71,10 @@ body {
 .no-scroll {
   overflow: hidden;
 }
+
+.dark {
+  input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px #1E2139 inset !important;
+    -webkit-text-fill-color: white !important;
+  }
+}
